# chipcalc-rs-gtk

./: .gitmodules  Cargo.toml
src/: chipcalc.glade  chipcalc.glade~  main.rs
