[package]
name = "chipcalc-rs-gtk"
version = "0.1.0"
authors = ["djdisodo <djdisodo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
chipcalc_native_rust = { path = "chipcalc_native_rust" }
num-traits = "0.2"
chrono = "0.4"
cairo-rs = "0.9"
enum-iterator = "0.6"
lazy_static = "1.4"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
